Fix review area bottom to be visible also in Firefox

--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -374,7 +374,6 @@ and (max-width: 1000px) {
   position: fixed;
   top: 43px;
   right: 85px;
-  padding-bottom: 100px;
   overflow-y: scroll;
   height: 100%;
 }
@@ -1033,9 +1032,10 @@ and (max-width: 1000px) {
 }
 
 .application-handling__event-list {
-  padding-top: 9px;
+  padding: 9px 0;
   overflow-y: auto;
   overflow-x: hidden;
+  margin-bottom: 50px;
 }
 
 .application-handling__event-row {
